# SlicerVoxelmorph

./: README.md
SlicerVoxelmorph/SlicerVoxelmorph/: CMakeLists.txt  README.md
SlicerVoxelmorph/SlicerVoxelmorph/Voxelmorph/: CMakeLists.txt  Voxelmorph.py
SlicerVoxelmorph/SlicerVoxelmorph/Voxelmorph/Resources/UI/: Voxelmorph.ui
